# lab_glcuda

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cuda_globals.hpp  gl_globals.hpp  lab00.cpp  lab01.cpp  lab02-solution.cpp  lab02.cpp  lab03-flake.cpp  lab03-flake_kernel.cu  lab03.cpp  lab04.cpp  lab04_kernel.cu  lab05-surface_kernel.cu  lab05.cpp
src/shaders/: copy_shaders.cmake  particles-flake.geom  particles-flake.vert  particles.frag  particles.geom  particles.vert  simple-solution.frag  simple-solution.vert  simple.vert  terrain-05.frag  terrain-05.vert  terrain.vert
